# uv_ua_exclude_multi_project_probe

./: package.json
app1/: pyproject.toml
app2/: pyproject.toml
