[project]
name = "app2"
version = "0.1.0"
requires-python = ">=3.11"

[tool.poetry]
name = "app2"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.11"
flask = ">=3.0.0"
click = ">=8.1.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"